<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coranimus</string>
    <string name="welcome_message">Hello,</string>
    <string name="action_settings">Settings</string>
    <string name="watch_heart">Watch my heart !</string>
    <string name="current_beat">Current heart rate : </string>
    <string name="see_data">See previously recorded data</string>
    <string name="settings">Settings</string>
    <string name="action_about">About this app</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_beat">No data</string>
    <string name="export_to_xml">Export saved data in a XML file</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="this_device_will_be_used">This device will be used : </string>

    <!-- WatchHeartService items -->
    <string name="local_service_label">Coranimus is watching</string>
    <string name="local_service_started">Heartwatch started</string>
    <string name="local_service_stopped">Heartwatch stopped</string>
    <string name="title_activity_view_records">ViewRecordsActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>